Add a reference to the parent node (major refactor) so we can bottom up the tree