@@ -1,14 +1,19 @@
 package cat.kmruiz.mongodb.services.mql.ast.projection;
 
-import cat.kmruiz.mongodb.services.mql.ast.Node;
 import cat.kmruiz.mongodb.services.mql.ast.values.FieldReferenceNode;
 
-import java.util.Collections;
 import java.util.List;
 
-public record IncludeFieldNode<Origin>(Origin origin, FieldReferenceNode<Origin> reference) implements ProjectionComputationNode<Origin> {
-    @Override
-    public List<Node<Origin>> children() {
-        return Collections.singletonList(reference);
+public class IncludeFieldNode<Origin> extends ProjectionComputationNode<Origin> {
+    private final FieldReferenceNode<Origin> reference;
+
+    public IncludeFieldNode(Origin origin, FieldReferenceNode<Origin> reference) {
+        super(origin, List.of(reference));
+
+        this.reference = reference;
+    }
+
+    public FieldReferenceNode<Origin> reference() {
+        return reference;
     }
 }
